--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: This Movie Year
 email: kevin@kevin-wynn.com
 baseurl: ""
-# url: "http://localhost:4000"
-url: "http://thismovieyear.com"
-permalink: none
+url: "http://localhost:4000"
+# url: "http://thismovieyear.com"
+permalink: pretty
 future: true
 # Build settings
 markdown: kramdown
